shelf: Draw proper app list background for rtl.

See bug for screenshots of the bug.

Test: manual
Bug: 797236
Change-Id: Ibcb145a0c4ef126b1937aa302eb121e2a013de40
Reviewed-on: https://chromium-review.googlesource.com/842478
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#526084}
Former-commit-id: f0cc25a44ebf7c606a2e11b73cba1df0a52bdb5e